--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "git-demo-ui",
+  "name": "sample-react-plugin",
   "version": "0.1.0",
   "main": "./dist/lib/index.js",
   "module": "./dist/lib/index.js",
