--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "sample-react-plugin",
+  "version": "0.1.0",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
   "types": "./dist/types/index.d.ts",
