--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "sample-react-plugin",
+  "name": "micro-front-end-app1",
   "version": "0.1.0",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
-  "types": "./dist/types/index.d.ts",
   "sideEffects": false,
   "files": [
     "dist",
@@ -11,11 +10,6 @@
     "types"
   ],
   "dependencies": {
-    "@nivo/bar": "^0.79.1",
-    "@nivo/core": "^0.79.0",
-    "@nivo/pie": "^0.79.1",
-    "@nivo/radial-bar": "^0.79.1",
-    "@reduxjs/toolkit": "^1.9.3",
     "@rollup/plugin-typescript": "^11.1.2",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
@@ -28,25 +22,16 @@
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "antd": "^4.10.0",
-    "axios": "^0.26.0",
+    "axios": "^1.4.0",
     "dateformat": "^5.0.3",
     "i": "^0.3.7",
     "lodash": "^4.17.21",
-    "msw": "^0.36.8",
     "node-sass": "^4.14.1",
     "npm": "^8.15.1",
-    "powerbi-client": "^2.21.1",
-    "powerbi-client-react": "^1.3.5",
-    "powerbi-report-authoring": "^1.1.3",
     "re-resizable": "^6.9.1",
     "react": "^17.0.1",
-    "react-async": "^10.0.1",
     "react-dom": "^17.0.1",
-    "react-draggable": "^4.4.4",
-    "react-redux": "^7.2.6",
-    "react-resizable": "^3.0.4",
     "react-scripts": "4.0.1",
-    "react-tooltip": "^4.2.21",
     "typescript": "^4.5.5",
     "web-vitals": "^0.2.4"
   },
